cbits/Bullet.h

void btBoxShape_getHalfExtentsWithMargin(void *c,float* ret); //method: getHalfExtentsWithMargin ::btVector3 ( ::btBoxShape::* )(  ) const
void btBoxShape_localGetSupportingVertexWithoutMargin(void *c,float* p0,float* ret); //method: localGetSupportingVertexWithoutMargin ::btVector3 ( ::btBoxShape::* )( ::btVector3 const & ) const
void* btBvhTriangleMeshShape_new0(void* p0,int p1,int p2); //constructor: btBvhTriangleMeshShape  ( ::btBvhTriangleMeshShape::* )( ::btStridingMeshInterface *,bool,bool ) 
void* btBvhTriangleMeshShape_new1(void* p0,int p1,float* p2,float* p3,int p4); //constructor: btBvhTriangleMeshShape  ( ::btBvhTriangleMeshShape::* )( ::btStridingMeshInterface *,bool,::btVector3 const &,::btVector3 const &,bool ) 
void btBvhTriangleMeshShape_free(void *c);
 
int btBvhTriangleMeshShape_calculateSerializeBufferSize(void *c); //method: calculateSerializeBufferSize int ( ::btBvhTriangleMeshShape::* )(  ) const
void btBvhTriangleMeshShape_buildOptimizedBvh(void *c); //method: buildOptimizedBvh void ( ::btBvhTriangleMeshShape::* )(  ) 
void btBvhTriangleMeshShape_setLocalScaling(void *c,float* p0); //method: setLocalScaling void ( ::btBvhTriangleMeshShape::* )( ::btVector3 const & ) 
void btBvhTriangleMeshShape_performRaycast(void *c,void* p0,float* p1,float* p2); //method: performRaycast void ( ::btBvhTriangleMeshShape::* )( ::btTriangleCallback *,::btVector3 const &,::btVector3 const & ) 
void btBvhTriangleMeshShape_setTriangleInfoMap(void *c,void* p0); //method: setTriangleInfoMap void ( ::btBvhTriangleMeshShape::* )( ::btTriangleInfoMap * ) 
int btBvhTriangleMeshShape_usesQuantizedAabbCompression(void *c); //method: usesQuantizedAabbCompression bool ( ::btBvhTriangleMeshShape::* )(  ) const
char const * btBvhTriangleMeshShape_getName(void *c); //method: getName char const * ( ::btBvhTriangleMeshShape::* )(  ) const
char const * btBvhTriangleMeshShape_serialize(void *c,void* p0,void* p1); //method: serialize char const * ( ::btBvhTriangleMeshShape::* )( void *,::btSerializer * ) const
void* btBvhTriangleMeshShape_getTriangleInfoMap(void *c); //method: getTriangleInfoMap ::btTriangleInfoMap const * ( ::btBvhTriangleMeshShape::* )(  ) const
void* btBvhTriangleMeshShape_getTriangleInfoMap0(void *c); //method: getTriangleInfoMap ::btTriangleInfoMap const * ( ::btBvhTriangleMeshShape::* )(  ) const
void* btBvhTriangleMeshShape_getTriangleInfoMap1(void *c); //method: getTriangleInfoMap ::btTriangleInfoMap * ( ::btBvhTriangleMeshShape::* )(  ) 
void btBvhTriangleMeshShape_serializeSingleTriangleInfoMap(void *c,void* p0); //method: serializeSingleTriangleInfoMap void ( ::btBvhTriangleMeshShape::* )( ::btSerializer * ) const
int btBvhTriangleMeshShape_getOwnsBvh(void *c); //method: getOwnsBvh bool ( ::btBvhTriangleMeshShape::* )(  ) const
void btBvhTriangleMeshShape_partialRefitTree(void *c,float* p0,float* p1); //method: partialRefitTree void ( ::btBvhTriangleMeshShape::* )( ::btVector3 const &,::btVector3 const & ) 
void* btBvhTriangleMeshShape_getOptimizedBvh(void *c); //method: getOptimizedBvh ::btOptimizedBvh * ( ::btBvhTriangleMeshShape::* )(  ) 
void btBvhTriangleMeshShape_processAllTriangles(void *c,void* p0,float* p1,float* p2); //method: processAllTriangles void ( ::btBvhTriangleMeshShape::* )( ::btTriangleCallback *,::btVector3 const &,::btVector3 const & ) const