Physics/Bullet/Raw/BulletCollision/CollisionShapes.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.h?r=2223#34>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.cpp?r=2223>
-}
{#fun btBoxShape_getHalfExtentsWithMargin as btBoxShape_getHalfExtentsWithMargin    `( BtBoxShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.h?r=2223#59>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.cpp?r=2223>
-}
{#fun btBoxShape_localGetSupportingVertexWithoutMargin as btBoxShape_localGetSupportingVertexWithoutMargin    `( BtBoxShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ vec
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.h?r=2223#59>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBoxShape.cpp?r=2223>
-}
{#fun btBoxShape_localGetSupportingVertexWithoutMargin as btBoxShape_localGetSupportingVertexWithoutMargin'    `( BtBoxShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ vec
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
-- * btBvhTriangleMeshShape
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#43>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_new0 as btBvhTriangleMeshShape0    `( BtStridingMeshInterfaceClass p0 )' =>     {  withBt* `p0' ,  `Bool' ,  `Bool'  } -> `BtBvhTriangleMeshShape' mkBtBvhTriangleMeshShape* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#46>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_new1 as btBvhTriangleMeshShape1    `( BtStridingMeshInterfaceClass p0 )' =>     {  withBt* `p0' ,  `Bool' , withVec3* `Vec3' , withVec3* `Vec3' ,  `Bool'  } -> `BtBvhTriangleMeshShape' mkBtBvhTriangleMeshShape* #}
{#fun btBvhTriangleMeshShape_free    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#132>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_calculateSerializeBufferSize as btBvhTriangleMeshShape_calculateSerializeBufferSize    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_buildOptimizedBvh as btBvhTriangleMeshShape_buildOptimizedBvh    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#71>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_setLocalScaling as btBvhTriangleMeshShape_setLocalScaling    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ scaling
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#71>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_setLocalScaling as btBvhTriangleMeshShape_setLocalScaling'    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ scaling
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_performRaycast as btBvhTriangleMeshShape_performRaycast    `( BtBvhTriangleMeshShapeClass bc , BtTriangleCallbackClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ callback
, withVec3* `Vec3'  peekVec3* -- ^ raySource
, withVec3* `Vec3'  peekVec3* -- ^ rayTarget
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#57>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_performRaycast as btBvhTriangleMeshShape_performRaycast'    `( BtBvhTriangleMeshShapeClass bc , BtTriangleCallbackClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ callback
, allocaVec3-  `Vec3'  peekVec3* -- ^ raySource
, allocaVec3-  `Vec3'  peekVec3* -- ^ rayTarget
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#87>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_setTriangleInfoMap as btBvhTriangleMeshShape_setTriangleInfoMap    `( BtBvhTriangleMeshShapeClass bc , BtTriangleInfoMapClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ triangleInfoMap
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#82>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_usesQuantizedAabbCompression as btBvhTriangleMeshShape_usesQuantizedAabbCompression    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#68>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_getName as btBvhTriangleMeshShape_getName    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#105>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_serialize as btBvhTriangleMeshShape_serialize    `( BtBvhTriangleMeshShapeClass bc , BtSerializerClass p1 )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ dataBuffer
, withBt* `p1'  -- ^ serializer
 } ->  `String'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#92>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_getTriangleInfoMap0 as btBvhTriangleMeshShape_getTriangleInfoMap    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtTriangleInfoMap'  mkBtTriangleInfoMap* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#92>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_getTriangleInfoMap0 as btBvhTriangleMeshShape_getTriangleInfoMap0    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtTriangleInfoMap'  mkBtTriangleInfoMap* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#97>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_getTriangleInfoMap1 as btBvhTriangleMeshShape_getTriangleInfoMap1    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtTriangleInfoMap'  mkBtTriangleInfoMap* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#109>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_serializeSingleTriangleInfoMap as btBvhTriangleMeshShape_serializeSingleTriangleInfoMap    `( BtBvhTriangleMeshShapeClass bc , BtSerializerClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ serializer
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#50>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_getOwnsBvh as btBvhTriangleMeshShape_getOwnsBvh    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#65>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_partialRefitTree as btBvhTriangleMeshShape_partialRefitTree    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#65>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_partialRefitTree as btBvhTriangleMeshShape_partialRefitTree'    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#73>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_getOptimizedBvh as btBvhTriangleMeshShape_getOptimizedBvh    `( BtBvhTriangleMeshShapeClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOptimizedBvh'  mkBtOptimizedBvh* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h?r=2223#60>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp?r=2223>
-}
{#fun btBvhTriangleMeshShape_processAllTriangles as btBvhTriangleMeshShape_processAllTriangles    `( BtBvhTriangleMeshShapeClass bc , BtTriangleCallbackClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ callback
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
